--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
                 <span class="projectBoxes__techButton">JavaScript</span>
                 <span class="projectBoxes__techButton">HTML</span>
                 <span class="projectBoxes__techButton">CSS</span>
+                <span class="projectBoxes__techButton">PostCSS</span>
+                <span class="projectBoxes__techButton">Webpack</span>
               </div>
             </div>
           </div>
@@ -339,6 +341,19 @@
             <span class="certList__certTech">(
               <strong>Data Structures</strong>,
               <strong>Algorithms</strong>
+              )
+            </span>
+          </span>
+        </li>
+        <li>
+          <span class="liText">
+            <a href="https://advancedreact.com/"
+              target="_blank">Fullstack Advanced React & GraphQL</a>
+            <span class="certList__certTech">(
+              <strong>React</strong>,
+              <strong>Next.js</strong>,
+              <strong>GraphQL</strong>,
+              <strong>Headless CMS</strong>
               )
             </span>
           </span>
