--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="arrowDiv scroll-link" data-scroll-location="aboutme">
-        <svg viewBox="4 4 16 16" class="arrow bounce" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="4 4 16 16" alt="arrow link to about me" class="arrow bounce" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 0h34v24H0V0z" fill="none" />
           <path d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z" />
         </svg>
