updated about me section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfolio of Ben Unyolo, full stack developer based in Montreal, Canada">
+  <meta name="description" content="Portfolio of Ben Unyolo, front end developer based in Montreal, Canada">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="dist/main.css" rel="stylesheet">
   <!-- icons -->
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
 
-  <title>Ben Unyolo | Full Stack Developer</title>
+  <title>Ben Unyolo | Front End Developer</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <h1>Ben Unyolo</h1>
       </div>
       <div class="title">
-        <h2>Full Stack Developer</h2>
+        <h2>Front End Developer</h2>
       </div>
 
       <div class="arrowDiv scroll-link" data-scroll-location="aboutme">
@@ -48,27 +48,22 @@
     <!-- ABOUT ME -->
     <section id="aboutme">
       <h3 class="smallPaddingTop">About Me</h3>
-      <p>Hi! I’m Ben, a <strong>full stack developer</strong> originally from England, based in <strong>Montreal</strong>.</p>
+      <p>Hi! I’m Ben, a <strong>Front End Developer</strong> originally from England, based in <strong>Montreal</strong>.</p>
       <p>
-        After graduating from <strong>The University of Manchester</strong> in England with a degree in
-        <strong>Biomedical Sciences</strong>, I decided to
-        spend a year working for <strong>Disney</strong> in Orlando.
-        Afterwards I returned to the UK and became a <strong>Manager</strong> for a restaurant group in Manchester.
-        The following year I moved to Canada, where I began my Developer journey.
-        I first lived in Ottawa, but I am now based in Montreal providing Tech Support for the VFX company
-        <strong>DNEG</strong>.
+        In 2018 I moved to Canada from the UK and began my developer journey. I lived in Ottawa for a year working in hospitality whilst studying programming in my spare time, and then I moved to Montreal where I started working in Tech Support for the VFX company <strong>DNEG</strong>. Since June 2021 I have been working as a Front-End Developer for a marketing agency called <strong>KRFTWRK</strong>. To see my full work history go to my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> page.
       </p>
-      <p class="noMarginBottom">I'm a self taught full stack developer focusing on JavaScript with a bit more experience
-        on the front-end. Some of the technologies and tools I've been working with recently include:
+      <p class="noMarginBottom">Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
         <li><span class="liText">JavaScript (ES6+)</li>
         <li><span class="liText">TypeScript</li>
         <li><span class="liText">Python</li>
         <li><span class="liText">React</li>
+        <li><span class="liText">Gatsby</li>
         <li><span class="liText">NodeJS</li>
         <li><span class="liText">ExpressJS</li>
         <li><span class="liText">Flask</li>
         <li><span class="liText">MongoDB</li>
+        <li><span class="liText">GraphQL</li>
         <li><span class="liText">SQL (MySQL)</li>
         <li><span class="liText">HTML</li>
         <li><span class="liText">CSS</li>
@@ -77,7 +72,7 @@
         class="scroll-link" data-scroll-location="certifications">certifications</a>.</p>
 
       </p>
-      <p>When I'm not coding I'm usually training for my next half-marathon, reading a book about the tech industry or
+      <p>When I'm not coding I'm usually training for my next half-marathon, reading a tech or science book, or
         watching English <strike>soccer</strike> football.</p>
 
       <p>Check out my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> and <a
@@ -375,7 +370,7 @@
 
     <!-- FOOTER -->
     <section id="footer">
-      <p class="xSmallPaddingBottom">Page designed by Ben Unyolo.</p>
+      <p class="xSmallPaddingBottom">Page designed by me.</p>
     </section>
   </div>
 
