--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
 
-  <title>Ben Unyolo | Front End Developer</title>
+  <title>Ben Unyolo | Full Stack Developer</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <h1>Ben Unyolo</h1>
       </div>
       <div class="title">
-        <h2>Front End Developer</h2>
+        <h2>Full Stack Developer</h2>
       </div>
 
       <div class="arrowDiv scroll-link" data-scroll-location="aboutme">
@@ -49,7 +49,7 @@
     <!--  -->
     <section id="aboutme">
       <h3 class="smallPaddingTop">About Me</h3>
-      <p>Hi! I’m Ben, a <strong>Front End Developer</strong> originally from England, based in <strong>Montreal</strong>.</p>
+      <p>Hi! I’m Ben, a <strong>Full Stack Developer</strong> originally from England, based in <strong>Montreal</strong>.</p>
       <p>
         In 2018 I moved to Canada from the UK and began my developer journey. I lived in Ottawa for a year working in hospitality whilst studying programming in my spare time, and then I moved to Montreal where I started working in Tech Support for the VFX company <strong>DNEG</strong>. Since June 2021 I have been working as a Front-End Developer for a marketing agency called <strong>KRFTWRK</strong>. To see my full work history go to my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> page.
       </p>
