removes email address

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         watching English <strike>soccer</strike> football.</p>
 
       <p>Check out my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> and <a
-          href="https://github.com/benunyolo" target="_blank">GitHub</a>, or send
-        me an <a href="mailto:ben@benunyolo.com" target="_blank">email</a>.</p>
+          href="https://github.com/benunyolo" target="_blank">GitHub</a>.</p>
 
     </section>
     <span class="separator"></span>
@@ -359,15 +358,14 @@
     </section>
 
     <!-- CONTACT -->
-    <section id="contact">
+    <!-- <section id="contact">
       <h3>Contact</h3>
       <p>
         If you are looking for a passionate, methodical and logical developer with a strong determination to succeed
-        in this industry, you can send me an email at <a href="mailto:ben@benunyolo.com"
-          target="_blank">ben@benunyolo.com</a> or send
+        in this industry, send
         me a message on <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a>.
       </p>
-    </section>
+    </section> -->
 
     <!-- FOOTER -->
     <section id="footer">
